Dockerize Frontend and Backend, prepare for CI/CD